# XPlay

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lucas/xplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  XData.cpp  XData.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XThread.cpp  XThread.h  native-lib.cpp
app/src/main/java/com/lucas/xplay/: MainActivity.java
app/src/test/java/com/lucas/xplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
